--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DB_URL=mongodb://localhost:27017/youtube
+DB_URL=mongodb+srv://todo:todovital@todo.x0ojxpd.mongodb.net/youtubeclone
 JWT_SECRET=youtube_jwt
