--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules/
 logs
 *.log
 npm-debug.log*
+.env
 
 # Environment variables
 # ✅ “I am providing a .env file on GitHub for easy download and testing.”
